force-app/main/default/objects/Account/fields/YTD_NumberOfCancelledOrders__c.field-meta.xml
<CustomField>
    <fullName>YTD_NumberOfCancelledOrders__c</fullName>
    <label>YTD Number of Cancelled Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>