force-app/main/default/objects/Account/fields/YTD_NumberOfManualOrders__c.field-meta.xml
<CustomField>
    <fullName>YTD_NumberOfManualOrders__c</fullName>
    <label>YTD Number of Manual Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>