force-app/main/default/objects/Account/fields/YTD_NumberOfOrders__c.field-meta.xml
<CustomField>
    <fullName>YTD_NumberOfOrders__c</fullName>
    <formula>( YTD_NumberOfCancelledOrders__c +  YTD_NumberOfManualOrders__c +  YTD_NumberOfSubmittedOrders__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is a sum of YTD Number of Submitted Orders and YTD Number of Cancelled Orders and YTD Number of Manual Orders.</inlineHelpText>
    <label>YTD Number of Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>