force-app/main/default/objects/Account/fields/YTD_NumberOfSubmittedOrders__c.field-meta.xml
<CustomField>
    <fullName>YTD_NumberOfSubmittedOrders__c</fullName>
    <label>YTD Number of Submitted Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>