force-app/main/default/objects/Account/recordTypes/Distributors_RMI.recordType-meta.xml
<RecordType>
    <fullName>Distributors_RMI</fullName>
    <active>true</active>
    <description>Account record type for distributors</description>
    <label>Distributor</label>
</RecordType>