force-app/main/default/objects/Account/recordTypes/HCO_RFMC.recordType-meta.xml
<RecordType>
    <fullName>HCO_RFMC</fullName>
    <active>true</active>
    <description>Health Care Organizations</description>
    <label>HCO</label>
</RecordType>