force-app/main/default/objects/Account/recordTypes/Hospital_Clinic_RMI.recordType-meta.xml
<RecordType>
    <fullName>Hospital_Clinic_RMI</fullName>
    <active>false</active>
    <description>Account record type for institutions of Hospital or Clinic type</description>
    <label>Hospital/Clinic</label>
</RecordType>