force-app/main/default/objects/Account/recordTypes/Insurance_Company_RMI.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Company_RMI</fullName>
    <active>true</active>
    <description>Account record type for institutions of Insurance Company type</description>
    <label>Insurance Company</label>
</RecordType>