force-app/main/default/objects/Account/recordTypes/NGO_RMI.recordType-meta.xml
<RecordType>
    <fullName>NGO_RMI</fullName>
    <active>true</active>
    <description>Account record type for institutions of NGO type</description>
    <label>NGO</label>
</RecordType>