force-app/main/default/objects/Account/recordTypes/Pathology_Services_RMI.recordType-meta.xml
<RecordType>
    <fullName>Pathology_Services_RMI</fullName>
    <active>true</active>
    <description>Account record type for institutions of Pathology Services type</description>
    <label>Pathology Services</label>
</RecordType>