force-app/main/default/objects/Account/recordTypes/PersonAccount.recordType-meta.xml
<RecordType>
    <fullName>PersonAccount</fullName>
    <active>true</active>
    <description>Record Type to enable Person account</description>
    <label>PersonAccount</label>
</RecordType>