force-app/main/default/objects/Account/validationRules/AccountRecordTypeUpdateCheck_RMI.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountRecordTypeUpdateCheck_RMI</fullName>
    <active>true</active>
    <description>Check if the Account Record Type has been updated before saving. Account Record Type is mastered and should not be updated.</description>
    <errorConditionFormula>AND(
            OR(
                AND(
                    OR(
                        $Setup.Core_Instance_RFM__c.Core_Identity__c == &apos;EEMEA&apos;,
                        AND(
                            $Setup.Core_Instance_RFM__c.Core_Identity__c == &apos;LATAM&apos;,
                            ISPICKVAL(ManualCountry_RFM__c, &apos;CA&apos;)
                        )
                    ),
                    NOT(
                        OR(
                            $Profile.Name = &apos;Global Business Admin&apos;,
                            $Profile.Name = &apos;Global Customer Service&apos;,
                            $Profile.Name = &apos;Israel Customer Service&apos;
                        )
                    ),
                    ISCHANGED(RecordTypeId)
                ),
                AND(
                    NOT(
                        OR(
                            $Setup.Core_Instance_RFM__c.Core_Identity__c == &apos;EEMEA&apos;,
                            AND(
                                $Setup.Core_Instance_RFM__c.Core_Identity__c == &apos;LATAM&apos;,
                                ISPICKVAL(ManualCountry_RFM__c, &apos;CA&apos;)
                            )
                        )
                    ),
                    ISCHANGED(RecordTypeId)
                )
            ),
            NOT($Profile.Name = &apos;System Administrator&apos;)
        )</errorConditionFormula>
    <errorMessage>The Account Record Type cannot be updated in this system.</errorMessage>
</ValidationRule>