force-app/main/default/objects/Account/validationRules/CheckRecordTypeOfHCODelegated.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckRecordTypeOfHCODelegated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
            NOT(ISBLANK(HCODelegatedUser__c)),
            HCODelegatedUser__r.RecordType.Name &lt;&gt; &quot;HCO Delegated User&quot;
            )</errorConditionFormula>
    <errorDisplayField>HCODelegatedUser__c</errorDisplayField>
    <errorMessage>This account must be HCO Delegated User.</errorMessage>
</ValidationRule>