force-app/main/default/objects/Account/validationRules/InactiveReasonOnInactiveAccount_RMI.validationRule-meta.xml
<ValidationRule>
    <fullName>InactiveReasonOnInactiveAccount_RMI</fullName>
    <active>true</active>
    <description>Checks if Account is Inactive when Inactive Reason is filled</description>
    <errorConditionFormula>ISPICKVAL( Active_RMI__c , &apos;No&apos;) &amp;&amp;  ISBLANK(  Inactive_Reason_RMI__c ) &amp;&amp; RecordType.Name  = &apos;Customer User&apos; &amp;&amp; TEXT(ManualCountry_RFM__c) = &apos;IL&apos;</errorConditionFormula>
    <errorMessage>Inactive Reason must be filled for Inactive Patient</errorMessage>
</ValidationRule>