force-app/main/default/objects/Account/validationRules/NoFutureBirthdateForPatient.validationRule-meta.xml
<ValidationRule>
    <fullName>NoFutureBirthdateForPatient</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name = &apos;Customer User&apos;  &amp;&amp; ( PersonBirthdate &gt; TODAY() ) &amp;&amp; TEXT(ManualCountry_RFM__c) = &apos;IL&apos;</errorConditionFormula>
    <errorMessage>Birthdate can&apos;t be set to the future</errorMessage>
</ValidationRule>