force-app/main/default/objects/Account/listViews/CusAccounts_ListView_RMI.listView-meta.xml
<ListView>
    <fullName>CusAccounts_ListView_RMI</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Country_Reference_RFMC__c</columns>
    <columns>AccountType_RMI__c</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>AccountAdoptionLadder_RMI__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Customer_User</value>
    </filters>
    <label>Customer Accounts</label>
    <language>en_US</language>
</ListView>