force-app/main/default/objects/Account/listViews/Delegated_User_Accounts.listView-meta.xml
<ListView>
    <fullName>Delegated_User_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Country_Reference_RFMC__c</columns>
    <columns>AccountType_RMI__c</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>AccountAdoptionLadder_RMI__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.HCPDelegatedUser_RFM</value>
    </filters>
    <label>Delegated User Accounts</label>
    <language>en_US</language>
</ListView>