force-app/main/default/objects/Account/listViews/DistributorAccounts_ListView_RMI.listView-meta.xml
<ListView>
    <fullName>DistributorAccounts_ListView_RMI</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Country_Reference_RFMC__c</columns>
    <columns>AccountType_RMI__c</columns>
    <columns>Email_distributor_RMI__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Distributors_RMI</value>
    </filters>
    <label>Distributor Accounts</label>
    <language>en_US</language>
</ListView>