force-app/main/default/objects/Account/listViews/HCOAccounts_ListView_RMI.listView-meta.xml
<ListView>
    <fullName>HCOAccounts_ListView_RMI</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Country_Reference_RFMC__c</columns>
    <columns>AccountType_RMI__c</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>City_RFMC__c</columns>
    <columns>Direct_Customer_RMI__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.HCO_RFMC</value>
    </filters>
    <label>HCO Accounts</label>
    <language>en_US</language>
</ListView>