force-app/main/default/objects/Account/listViews/UK_HCO_Discount_Management.listView-meta.xml
<ListView>
    <fullName>UK_HCO_Discount_Management</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>DiscountCodesCounter__c</columns>
    <columns>ActiveDiscountCodesCounter__c</columns>
    <columns>AppliedDiscountCodesCounter__c</columns>
    <columns>AwaitingDiscountCodesCounter__c</columns>
    <columns>CancelledDiscountCodesCounter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ManualCountry_RFM__c</field>
        <operation>equals</operation>
        <value>UK</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.HCO_RFMC</value>
    </filters>
    <label>UK HCO Discount Management</label>
</ListView>